Reproducible case of backwards nextParagraph returning a position ahead of the input position https://bugs.webkit.org/show_bug.cgi?id=196127 <rdar://problem/49135890>

Reviewed by Wenson Hsieh.

Source/WebCore:

Fix up the code to handle:

        1. When the specified position is at a paragraph boundary.
                For this case, we do what we do now for the !withinUnitOfGranularity case.
        2. When the specified position is actually inside a paragraph:
                For this case, we need to return the end of the previous paragraph or the
                start of the next paragraph depending on whether we are selecting forward
                or backwards, respectively.

* editing/VisibleUnits.cpp:
(WebCore::nextParagraphBoundaryInDirection):

Source/WebKit:

Remove workaround now that WebCore::nextParagraphBoundaryInDirection() behaves correctly.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::moveByGranularityRespectingWordBoundary):

Tools:

Add a test to ensure that requesting two paragraphs around the insertion point that is
not in a paragraph still works.

* TestWebKitAPI/Tests/WebKitCocoa/DocumentEditingContext.mm:
(TEST):

Canonical link: https://commits.webkit.org/218491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253578 268f45cc-cd09-0410-ab3c-d52691b4dbfc